--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -266,7 +266,7 @@ nocite: |
 
 #### Morphological traits
 
-Going from shaded to exposed canopy position, morphological adaptation to dissapate heat increases. Sun leaves are often thicker, smaller, hairier, with greater dissection--lobes and serration--[@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with more vertical leaf angles than shade leaves [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. On the other hand, because shaded leaves have greater effective leaf width [@fauset_differences_2018], boundary layer thickness, stomatal resistance and therefore longer thermal time constant, they exhibit lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019]. Which leads to cooler $T_{leaf}$ under buffered conditions, and substanially warmer $T_{leaf}$ under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]
+Going from shaded to exposed canopy position, morphological adaptation to dissapate heat increases. Sun leaves are often thicker, smaller, hairier, with greater dissection--lobes and serration--[@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with more vertical leaf angles than shade leaves [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance. Under homogeneous light conditions in open-canopy, trait plasticity of sun leaves are based on $T_{air_{max}}$ and $VPD$ stress of canopy oriention [@mediavillaFoliarPlasticityRelated2019a]. Other hand, because shaded leaves have greater effective leaf width [@fauset_differencsunes_2018], boundary layer thickness, stomatal resistance and therefore longer thermal time constant, they exhibit lower convective cooling [@leighInfluenceLeafSize2017; Wright et al. 2019]. Which leads to cooler $T_{leaf}$ under buffered conditions, and substanially warmer $T_{leaf}$ under greater light or $T_{air}$ [@leighInfluenceLeafSize2017]
 
 #### Biochemical and physiological traits
 
@@ -315,7 +315,7 @@ nocite: |
 
 ### Stomatal conductance
 
-While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by $gs$ [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]; and therefore their ability to photosynthesize as well. During the day, max transpiration rate and $gs$ increases with height and is greater in the upper canopy compared to shaded canopies [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs when evaporative demand exceeds water transport capacity in exposed leaves thereby increasing $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004]. 
+While exposed sun leaves are equipped to thermoregulate more efficiently than shaded leaves, they are largely constrained by $gs$ [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]; and therefore their ability to photosynthesize as well. During the day, max transpiration rate and $gs$ increases with height and is greater in the upper canopy compared to shaded canopies [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010]. During midday, stomtal closure occurs when evaporative demand exceeds water transport capacity in exposed leaves thereby increasing $T_{leaf}$, and decreasing photosynthesis [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
 
 ### Photosynthesis
 
@@ -324,7 +324,7 @@ This is primarily driven by the greater light available to sun leaves. Photosynt
 
 In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions, including higher concentration of Rubsico, and multiple layers of palisade parenchyma. Light saturation levels differ between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy).The vertical gradient in photosynthetic rates is also influenced by available concentration of N and P (and water availability).
 
-Leaf temperature beyond photosynthetic optimum temperature declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020]. Leaves in tropical upper canopies have shown to experience air temperatures well above $40-60{^\circ}C$ on a regular basis, if $T_{leaf}$ is not regulated through $gs$ or adapated, heat stress can loss of canopy leaves [**REF**] 
+Leaf temperature beyond photosynthetic optimum temperature declines photosynthesis due it's peaked response to temperature. Photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; @slotSituTemperatureResponse2017). Beyond the optimum, photosynthesis decreases as a result of stomatal closure and increasing leaf temperature (e.g. @slotSituTemperatureResponse2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (@kumarathungeAcclimationAdaptationComponents2019a; e.g. Sage & Kubien 2007; Varhammer et al. 2015 ). Heat stress at $40-60{^\circ}C$ can cause irreversible damage to photosystem [II] leading to leaf necrosis and eventually leaf death [Baker 2008; @feeley_thermal_2020]. Leaves in tropical upper canopies have shown to experience air temperatures well above $40-60{^\circ}C$ on a regular basis, if $T_{leaf}$ is not regulated through $gs$ or adapated, heat stress can loss of canopy leaves [**REF**] 
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect that sun leaves should tend to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*), based on evidence that optimum temperature $T_{opt}$ of $J_{max}$ increased with irradiance of an upper canopy leaf compared to shaded lower canopy leaf [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent based on the limited number of field studies that have compared temperature sensitivity of photosynthesis in sun and shade leaves.
@@ -335,7 +335,7 @@ For 3 species in Panama, the optimum temperature for sun leaves tended to be sli
 **Leaf thermal tolerance (Tcrit/ T50)**
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. Leaf thermal thresholds strongly reflect species adaptation to their microenvironment rather than macroclimate conditions [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] and phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Typical $T_{50}$ values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). With elevation, $T_{50}$ and $T_{crit}$ decrease, as seen in tropical foress and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], and vary with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, greater LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margin. Rather, across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
+Typical $T_{50}$ values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). With elevation, $T_{50}$ and $T_{crit}$ decrease, as seen in tropical foress and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], and vary with species [@krauseHightemperatureToleranceTropical2010a] and leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, greater LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margin. Rather, across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
@@ -422,9 +422,11 @@ Having established how physical conditions and biological form and function vary
 
 - Influence of increasing temperatures on species compositions and feedbacks to future forest microclimates and function?
 
-*While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Additionally, warming and heat waves can alter canopy and understory phenology and forest photosynthesis [@zohnerOngoingSeasonallyUneven2019].*
+While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilizatioN [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to microclimatic fauna [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Additionally, warming in other cases is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, in closed-canopy temperate forests [@maesPlantFunctionalTrait2020] 
 
-*Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with Andean thermophilization (death is faster than recruitment and growth). Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.*
+Additionally, warming and heat waves can alter canopy and understory phenology and forest photosynthesis [@zohnerOngoingSeasonallyUneven2019].*
+
+Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with Andean thermophilization (death is faster than recruitment and growth). Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
 ### canopy disturbance
 
@@ -432,9 +434,9 @@ Having established how physical conditions and biological form and function vary
 
 *(there's a lot of literature on canopy disturbance impacts--tap into that in this section)*
 
-*The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a].Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. With larger trees suffering disproportionally greater hydraulic stress during drought, can contribute to increasing larger tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020], or increase in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughnessare, also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].*
+Canopy structural composition and $LAI$ largely influence understory species composition and soil fertility [majasalmiImpactTreeCanopy2020], including buffering, which in-turn is influenced by the hydrological cycle [@davis_microclimatic_2019]. Each of these are subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a]. Frequent drought-related hydraulic limitation in forests alters species thermoregulation [@sastry_leaf_2018], and also decreases tree canopy circumference [@aussenacInteractionsForestStands2000a] due to sensitivity of overstory trees to variability in water availability and precipitation [@rollinsonClimateSensitivityUnderstory 2020]. With larger trees suffering disproportionally greater hydraulic stress during drought, can contribute to increasing larger tree mortality in forests around the world [@mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020], or increase in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughnessare, also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
  
-*Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Open-forest might experience greater microclimate warming than forests, having implications for forest regeneration, particularly in high-altitude regions [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.*
+Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. Open-forest might experience greater microclimate warming than forests, having implications for forest regeneration, particularly in high-altitude regions [@vonarxSpatiotemporalEffectsForest2012a]. Temperature driven photosynthesis limitation is reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
 
 ## Scaling across space and time 
