--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -239,7 +239,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy gradient of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] $T_{leaf}$ dynamics across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and leaf responses through the whole vertical canopy is becoming a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy gradient of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] $T_{leaf}$ dynamics across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the whole vertical canopy is becoming a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -254,23 +254,15 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where  sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, therefore have lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped more based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, therefore have lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped more based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
 
 #### Biochemical and physiological traits
 
-The distribution of biochemical traits enable photosynthesis and metabolic processes. Particularly $N_{area}$, is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a] and is optmized to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].
-
-##### *(Carotenoids/Xanthophyll cycle pigments)*
-
-Xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging function--are greater in sun-leaves where they enable heat and light tolerance by converting excess light to heat dissapation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. $VAZ$, and in general biochemical, constraints can result in lower temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]
-  
-##### Isoprene production
-Isoprene production *capability* increases vertically with light and therefore facilitates high heat tolerance in emitting species' canopy positons [Sharky] 
+The distribution of biochemical traits enable photosynthesis and metabolic processes, and protect against heat and light damage in sun-leaves. $N_{area}$, that is typically greater in the direction of new leaf growth [@niinemetsPhotosynthesisResourceDistribution2007a], optimizes to prevent photoinhition in sun- and, shade-leaves during sunflecks, under available soil nitrogen [@kitaoCanopyNitrogenDistribution2018].Similarly, carotenoids and xanthophyll pigments-violaxanthin, antheraxanthin and zeaxanthin [$VAZ$], an antioxidant scavenging and photoprotective function- convert excess light to heat dissaptation [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. Constraints to biochemical traits, particularly $VAZ$ can curb temperature acclimation [@kumarathungeAcclimationAdaptationComponents2019a]. Additionally, isoprene producing species are particularly advantageous in that it facilitates high heat tolerance in canopy positions[*REF*]
 
 ### Interspecific variation 
 
-Across tree-size ontogeny of the same species, while fundamental trait plasticity to light and water are observed in canopy and understory trees similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012], increase in LMA, photosynthetic capcity per area, and $gs$ with height are attributed to ontogenetical differences, under constant light conditions [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, trait adaptation to spatio-temporal light and biophysical gradient varies greatly with inherent specie-specific trait differences. As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
-
+Across forest species widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Therefore, in inter-specific trait variation, while general patterns of thermoregulation can be observed, some species might be more suspectable to heat stress at a vertical gradient than others [@fauset_differences_2018].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
